{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 14,
  "lineage": "497de477-48f9-d430-44ef-8578c4d5e0d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "auto-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62ce64a076d8f88",
            "association_id": "eipassoc-04940aad3546007e4",
            "domain": "vpc",
            "id": "eipalloc-0e62ce64a076d8f88",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-003b57f69b316f268",
            "private_dns": "ip-10-0-1-113.ap-south-1.compute.internal",
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-3-111-136-191.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.136.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "automated-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752692907119:internet-gateway/igw-0e34c9e7d85882ec1",
            "id": "igw-0e34c9e7d85882ec1",
            "owner_id": "752692907119",
            "tags": {
              "Name": "automated-somechange"
            },
            "tags_all": {
              "Name": "automated-somechange"
            },
            "vpc_id": "vpc-01512c2013db67c28"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62ce64a076d8f88",
            "association_id": "eipassoc-04940aad3546007e4",
            "connectivity_type": "public",
            "id": "nat-0c5b813c9c6f02d96",
            "network_interface_id": "eni-003b57f69b316f268",
            "private_ip": "10.0.1.113",
            "public_ip": "3.111.136.191",
            "subnet_id": "subnet-0c921e4f2360f1220",
            "tags": {
              "Name": "automated-NAT"
            },
            "tags_all": {
              "Name": "automated-NAT"
            }
          },
          "dependencies": [
            "aws_eip.auto-eip",
            "aws_internet_gateway.automated-igw",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752692907119:route-table/rtb-036f12ee525820ec8",
            "id": "rtb-036f12ee525820ec8",
            "owner_id": "752692907119",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c5b813c9c6f02d96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01512c2013db67c28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.example",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752692907119:route-table/rtb-059f36d4e71f5623f",
            "id": "rtb-059f36d4e71f5623f",
            "owner_id": "752692907119",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e34c9e7d85882ec1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01512c2013db67c28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.automated-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7cda0aa8b1b120",
            "route_table_id": "rtb-036f12ee525820ec8",
            "subnet_id": "subnet-06824d782cf11cc5d"
          },
          "dependencies": [
            "aws_eip.auto-eip",
            "aws_internet_gateway.automated-igw",
            "aws_nat_gateway.example",
            "aws_route_table.private-rt",
            "aws_subnet.main",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7af15f6bd971cb6",
            "route_table_id": "rtb-059f36d4e71f5623f",
            "subnet_id": "subnet-0c921e4f2360f1220"
          },
          "dependencies": [
            "aws_internet_gateway.automated-igw",
            "aws_route_table.public-rt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752692907119:subnet/subnet-0c921e4f2360f1220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c921e4f2360f1220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752692907119",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-automated-vpc"
            },
            "tags_all": {
              "Name": "public-subnet-automated-vpc"
            },
            "vpc_id": "vpc-01512c2013db67c28"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752692907119:subnet/subnet-06824d782cf11cc5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06824d782cf11cc5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752692907119",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-automated-vpc"
            },
            "tags_all": {
              "Name": "private-subnet-automated-vpc"
            },
            "vpc_id": "vpc-01512c2013db67c28"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752692907119:vpc/vpc-01512c2013db67c28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8357bc9648cfee8",
            "default_route_table_id": "rtb-00e899a36c486e478",
            "default_security_group_id": "sg-0baa6a50302313af2",
            "dhcp_options_id": "dopt-0949b69f54a98317b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01512c2013db67c28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e899a36c486e478",
            "owner_id": "752692907119",
            "tags": {
              "Name": "automated-vpc"
            },
            "tags_all": {
              "Name": "automated-vpc"
            }
          }
        }
      ]
    }
  ]
}